# cryoSBI_classifier

./: README.rst  pyproject.toml
src/cryo_sbi/inference/: check_train_config.py  command_line_tools.py  inference.py  priors.py  train.py  train_models.py
src/cryo_sbi/inference/models/: build_models.py  embedding_nets.py  estimator_models.py
src/cryo_sbi/utils/: check_config.py  classifier_utils.py  command_line_tools.py  estimator_utils.py  generate_models.py  image_utils.py
src/cryo_sbi/wpa_simulator/: check_image_config.py  cryo_em_simulator.py  ctf.py  image_generation.py  noise.py
tests/: test_check_params.py  test_classifier.py  test_embeddings.py  test_image_utils.py  test_simulator.py
tests/config_files/: training_params_mlp.json  training_params_proto.json
