[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "cryosbi"
authors = [
   { name = "David Silva-Sanchez", email = "david.silva@yale.edu"},
   { name = "Lars Dingeldein"},
   { name = "Pilar Cossio"},
   { name = "Roberto Covino"}
]


version = "0.2"
dependencies = [
    "zuko",
    "torch",
    "numpy", 
    "matplotlib",
    "scipy",
    "torchvision",
    "mrcfile"
]


[project.scripts]
train_classifier = "cryo_sbi.inference.command_line_tools:cl_classifier_train_no_saving"
