[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "cryosbi"
authors = [
   { name = "David Silva-Sanchez", email = "david.silva@yale.edu"},
   { name = "Lars Dingeldein"},
   { name = "Pilar Cossio"},
   { name = "Roberto Covino"}
]


version = "0.2"
dependencies = [
    "zuko",
    "torch",
    "numpy", 
    "matplotlib",
    "scipy",
    "torchvision",
    "mrcfile",
    "tqdm",
]


[project.scripts]
train_classifier = "cryo_sbi.utils.command_line_tools:cl_train"
make_torch_models = "cryo_sbi.utils.command_line_tools:cl_make_torch_models"
classifier_inference = "cryo_sbi.utils.command_line_tools:cl_inference"
